--- a/3. Find the Missing Number in a Sequence/index.html
+++ b/3. Find the Missing Number in a Sequence/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1 class="">Find the Missing Number in a Sequence</h1>
+  <p>View Output in console</p>
 
   <script src="script.js"></script>
 </body>
